--- a/index.html
+++ b/index.html
@@ -135,6 +135,34 @@
 
 </section>
 
+
+<section class="topicos">
+      <h2 class="Titulos-topicos">Topicos Visitados Recentemente</h2>
+      <ul class="topicos-lista">
+
+        <lo> <a href="#" class="topicos-link">Android</a></lo>
+        <lo> <a href="#" class="topicos-link">Marketing Digital</a></lo>
+        <lo> <a href="#" class="topicos-link">OO</a></lo>
+        <lo> <a href="#" class="topicos-link">Agile</a></lo>
+        <lo> <a href="#" class="topicos-link">Startups</a></lo>
+        <lo> <a href="#" class="topicos-link">HTML</a></lo>
+        <lo> <a href="#" class="topicos-link">Java</a></lo>
+        <lo> <a href="#" class="topicos-link">Python</a></lo>
+        
+      </ul>
+
+</section>
+
+<section class="rodape">
+     <h2 class="contato-titulo"> Fique por dentro das novidades</h2>  
+     <h3 class="contato-texto"> Atualizações de e-books, novos livros, promoções e outros... </h3>
+     <input type="email" placeholder="Cadastre seu email"
+     class="contato-email">
+
+</section>
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"> </script>
         <script>const swiper = new Swiper('.swiper', {
     spaceBetween: 10,
